--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -1,1 +1,27 @@
-<?php echo $this->layout()->content; ?>
+<?php echo $this->doctype() ?>
+<html>
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <title>Crawling today</title>
+  <?php
+  echo $this->headLink()->appendStylesheet('/css/main.css').PHP_EOL;
+  echo $this->headLink()->appendStylesheet('http://fonts.googleapis.com/css?family=Josefin Slab');
+   ?>
+</head>
+<body>
+<div id="header" style="background-color: #EEEEEE; height: 30px;">
+    <div id="header-logo" style="float: left">
+        <a href="/">Crawling today</a>
+    </div>
+    <div id="header-navigation" style="float: right">
+        <a href="<?php echo $this->url(
+            array('controller'=>'admin'),
+            'default',
+            true) ?>">Admin-Tool</a>
+    </div>
+</div>
+
+<?php echo $this->layout()->content ?>
+
+</body>
+</html>
