--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -15,7 +15,7 @@
     </div>
     <div id="header-navigation" style="float: right">
         <a href="<?php echo $this->url(
-            array('controller'=>'admin'),
+            array('module'=>'admin'),
             'default',
             true) ?>">Admin-Tool</a>
     </div>
