--- a/application/modules/admin/views/scripts/topics/get.phtml
+++ b/application/modules/admin/views/scripts/topics/get.phtml
@@ -1,5 +1,2 @@
-<br /><br />
-<div id="view-content">
-	<p>View script for controller <b>Topics</b> and script/action name <b>get</b></p>
-    <?php echo $this->layout()->content ?>
-</div>
+<?php
+echo(Zend_Json::encode($this->topic));
