--- a/application/modules/admin/views/scripts/topics/articles/delete.phtml
+++ b/application/modules/admin/views/scripts/topics/articles/delete.phtml
@@ -1,4 +1,2 @@
-<br /><br />
-<div id="view-content">
-	<p>View script for controller <b>Topics/Articles</b> and script/action name <b>delete</b></p>
-</div>
+<?php
+echo(Zend_Json::encode($this->message));
